SLCORE-1039 Differentiate added/modified files in FS API (#1163)